bound poweroff key to powermenu

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -293,6 +293,9 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # Rofi bindings
 bind = $mainMod, SPACE, exec, rofi -show drun
 
+# Misc
+bind = , XF86PowerOff, exec, ~/.config/wofi/powermenu/script.sh
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
